Implement jlink custom runtime optimization to reduce installer size